Checking in files I thought were checked it ,and added .gitignore to the _sites directory

--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,8 @@ paginate: 10
 markdown: rdiscount
 permalink: :title
 highlighter: pygments
+
+image: /images/frontPorch.jpg
+
+gems:
+  - jekyll-auto-image
