No need to stash _sites in git as it's all generated. changed the location of the favicon and added the appropriate link path to the index.  Also, moved images to assets so we can keep everything organized.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ markdown: rdiscount
 permalink: :title
 highlighter: pygments
 
-image: /images/frontPorch.jpg
+image: /assets/frontPorch.jpg
 
 gems:
   - jekyll-auto-image
