Added in a new post with a summary of how I built monroeATX.  Moved the jekyll excerpt marker definition from the Old Settlers front matter down into _config.yml.

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ markdown: rdiscount
 permalink: :title
 highlighter: pygments
 
+excerpt_separator: <!--more-->  # you can specify your own separator, of course.
+
 image: /assets/frontPorch.jpg
 
 gems:
